--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://rayane:0000@cluster0.md3wubu.mongodb.net/tsthewavedb?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=somethingsecret
+PORT=4000
